# meshcore-rs

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/skills/adr-create/: SKILL.md
.claude/skills/new-crate/: SKILL.md
.claude/skills/vault-task/: SKILL.md
.claude/skills/verify-build/: SKILL.md
boards/rak4631/: Cargo.toml  Justfile  build.rs  memory.x
boards/rak4631/.cargo/: config.toml
boards/rak4631/src/: main.rs  nvm.rs
crates/meshcore-core/: Cargo.toml
crates/meshcore-core/src/: constants.rs  crypto.rs  dedup.rs  grp_txt.rs  header.rs  identity.rs  lib.rs  packet.rs
crates/meshcore-dispatch/: Cargo.toml
crates/meshcore-dispatch/src/: dispatcher.rs  duty_cycle.rs  lib.rs  rx_delay.rs  tx_queue.rs  types.rs
crates/meshcore-radio/: Cargo.toml
crates/meshcore-radio/src/: lib.rs  mock.rs  radio.rs  rng.rs  rtc.rs  sx1262.rs
docs/decisions/: 0001-workspace-structure.md  0002-no-std-first.md  0003-composable-roles.md  0004-execution-model-embassy-async.md  0005-lora-phy-sx1262-driver.md  0006-async-dispatcher-design.md  template.md
vault/meshcore-rs/: Project.md
vault/meshcore-rs/.obsidian/: workspace.json
vault/meshcore-rs/Architecture/: C-Reference-Map.md  Layer-Diagram.md
vault/meshcore-rs/Milestones/: M1-Core-Types.md  M2-Radio-Abstraction.md  M2-Radio-Traits.md  M2b-SX1262-Driver.md  M2c-Hardware-Smoke-Test.md  M3-Dispatcher.md  M4-Mesh-Routing.md  M5-Serial-USB.md  M6-Board-Bringup.md
vault/meshcore-rs/Tasks/: Backlog.md  Current.md
