[workspace]
resolver = "2"
members = ["crates/meshcore-core"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/user/meshcore-rs"

[workspace.dependencies]
heapless = "0.8"
defmt = "0.3"
embedded-hal = "1.0"
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
curve25519-dalek = { version = "4", default-features = false }
