[workspace]
resolver = "2"
members = ["crates/meshcore-core", "crates/meshcore-radio", "boards/rak4631"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/user/meshcore-rs"

[workspace.dependencies]
heapless = "0.8"
defmt = "0.3"
embedded-hal = "1.0"
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
curve25519-dalek = { version = "4", default-features = false }
embassy-time = { version = "0.4", default-features = false }
embassy-sync = { version = "0.6", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
lora-phy = { version = "3.0", default-features = false }
embedded-hal-async = { version = "1.0", default-features = false }
