[package]
name = "meshcore-rak4631"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Embassy runtime — latest stable
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = "0.5"
embassy-nrf = { version = "0.10", features = ["nrf52840", "time-driver-rtc1", "gpiote", "time"] }
embassy-futures = "0.1"

# Embedded
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
panic-halt = "1"

[profile.release]
opt-level = "z"
lto = true
