[package]
name = "meshcore-radio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Radio trait and hardware abstractions for MeshCore"

[features]
default = []
std = []
defmt = ["dep:defmt"]
mock = []
sx1262 = ["dep:lora-phy", "dep:embedded-hal-async"]

[dependencies]
heapless.workspace = true
defmt = { workspace = true, optional = true }
embassy-time.workspace = true
embedded-hal-async = { workspace = true, optional = true }
lora-phy = { workspace = true, optional = true }
meshcore-core = { path = "../meshcore-core" }

[dev-dependencies]
embassy-futures.workspace = true
